crates/stardrift-macros/tests/ui/unit_struct.stderr
error: ConfigDefaults cannot be derived for unit structs
 --> tests/ui/unit_struct.rs:5:1
  |
5 | struct UnitStruct;
  | ^^^^^^^^^^^^^^^^^^
